fixed a bug where the absence of the sponsored tag caused spacing issues with the product tile's bottom content

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -47,4 +47,8 @@ body {
   display: none;
 }
 
+.display-blank {
+  height: 1.5rem;
+}
+
 
